[package]
name = "tyto-db"
version = "0.1.0"
edition = "2024"


[build-dependencies]
cc = "1.0"


[dependencies]
rand = "0.8" # Use the latest compatible version
rand_chacha = "0.3"
serde = {version="1.0.219", features=["derive"]}
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.11.1"
blake3 = "1.8.1"
