[package]
name = "tyto-db"
version = "0.1.0"
edition = "2024"


[build-dependencies]
cc = "1.0"


[dependencies]
rand = "0.8" # Use the latest compatible version
rand_chacha = "0.3"
serde = {version="1.0.219", features=["derive"]}
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.11.1"
blake3 = "1.8.1"
aes-gcm = "0.10.3"
lazy_static = "1.5.0"
rust-lzma = "0.6.0"
serde_json = "1.0.140"
base64 = "0.22.1"
