[package]
name = "tyto-db"
version = "0.1.0"
edition = "2024"
license = "SPDX-License-Identifier: TytoDB-1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true

[dependencies]
rand = "0.8" 
rand_chacha = "0.3"
serde = {version="1.0.219", features=["derive"]}
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.11.1"
blake3 = "1.8.1"
aes-gcm = "0.10.3"
lazy_static = "1.5.0"
rust-lzma = "0.6.0"
serde_json = "1.0.140"
base64 = "0.22.1"
ahash = "0.8.11"
xxhash-rust = {version="0.8.15",features=["const_xxh3"]}
chrono = "0.4.41"
zmq = "0.10.0"
num_cpus = "1.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-flame = "0.2.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
